set max width for default material logo in the site branding block, update labels

--- a/config/install/block.block.material_admin_sitebranding.yml
+++ b/config/install/block.block.material_admin_sitebranding.yml
@@ -11,7 +11,7 @@ provider: null
 plugin: system_branding_block
 settings:
   id: system_branding_block
-  label: 'Site branding'
+  label: 'Material Admin Site branding'
   provider: system
   label_display: '0'
   use_site_logo: true
