--- a/config/install/material_admin.settings.yml
+++ b/config/install/material_admin.settings.yml
@@ -1,14 +1,19 @@
-features:
-  node_user_picture: 1
-  comment_user_picture: 1
-  comment_user_verification: 1
-  favicon: 1
-logo:
-  use_default: 1
 favicon:
-  use_default: 1
-material_admin_node_actions: 0
-material_admin_message_length: '88'
-material_admin_portal_login: 1
-material_admin_jqueryui_dialog_background: 1
-material_admin_jqueryui_dialog_close: 1
+  mimetype: image/vnd.microsoft.icon
+  path: ''
+  url: ''
+  use_default: true
+features:
+  comment_user_picture: true
+  comment_user_verification: true
+  favicon: true
+  node_user_picture: false
+logo:
+  path: ''
+  url: ''
+  use_default: true
+material_admin_node_actions: false
+material_admin_message_length: 88
+material_admin_portal_login: true
+material_admin_jqueryui_dialog_background: true
+material_admin_jqueryui_dialog_close: true
