tooltip swap to use jquery UI which will fix #28 and increase preformance

--- a/material_admin.libraries.yml
+++ b/material_admin.libraries.yml
@@ -11,6 +11,7 @@ global-styling:
     - core/jquery
     - core/jquery.once
     - core/drupalSettings
+    - core/jquery.ui.tooltip
 
 tables:
   version: VERSION
