--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gulp-jshint": "^2.0.4",
     "gulp-load-plugins": "^1.1.0",
     "gulp-refresh": "^1.1.0",
+    "gulp-rename": "^1.2.3",
     "gulp-replace": "^0.5.4",
+    "gulp-rtlcss": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.4",
     "gulp-sourcemaps": "^2.6.0",
